gradients are somewhat working...  but not really I think.

--- a/assets/css/custom.less
+++ b/assets/css/custom.less
@@ -37,6 +37,20 @@
 	} 
 }
 
+#date {
+  font-size: 1.2em
+}
+
+#gradient {
+  width: 120px;
+  height: 2px;
+  line-height:0;
+  margin: 8px 0;
+  background: -webkit-gradient(linear, left center, right center, from(hsl(190,100%,50%)), to(hsl(360,100%,50%))); 
+  background: linear-gradient(to right, hsl(190,100%,50%), hsl(360,100%,50%));
+  border-radius: 4px;
+}
+
 #feedWindow {
 	form { margin: 0 }
 	ul.feed { margin:0 }
