--- a/views/index.jade
+++ b/views/index.jade
@@ -12,6 +12,15 @@ block nav
   li#stop-btn
     a
       i.icon-pause.icon-large
+  li
+    a#refresh-btn
+      i.icon-refresh.icon-large
+
+block nav-right
+  li
+    a#date
+  li
+    a#gradient &nbsp;
 
 //- parts of the DOM before bootstrap .container
 block outer
