--- a/assets/css/custom.less
+++ b/assets/css/custom.less
@@ -22,6 +22,21 @@
   font-size: 18px;
 }
 
+.info {
+  h5 { margin: 2px 0 }
+  table { width: 80% }
+  td { text-align: right }
+  .llabel {
+    text-align: left;
+    font-size: 11px;
+    font-weight: bold;
+    color: #999999;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+  }
+  td.llabel{ padding-left: 15px; }
+}
+
 .map-container { 
 	width: 100%;
 	position:absolute 
