removed unused styles

--- a/views/_layout.jade
+++ b/views/_layout.jade
@@ -23,7 +23,8 @@ html
             ul#navTop.nav
               block nav
               li
-                span.spinner( style='display:none;margin-top:6px' )
+                a
+                  i.icon-spinner.icon-large.icon-spin( style='display:none' )
 
             .nav-collapse.collapse.pull-right
               ul.nav
