infoBubble updates with usage for current site

--- a/views/index.jade
+++ b/views/index.jade
@@ -42,7 +42,7 @@ block footer
           td {{ sq_ft }} 
           td.llabel sq ft
         tr
-          td {{ current_usage }} 
+          td.usage {{ current_usage }} 
           td.llabel kWh
         tr
           td {{ tzo }}
